fixed spacing

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,7 +1,7 @@
 ul {
     width: 100%;
     list-style-type: none;
-    margin: 0;
+    margin-top: 0;
     padding-left: 20px;
     top: 0;
     left: 0;
